service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pentryansvar-server
  namespace: pentryansvar-server
spec:
  selector:
    app:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
